# Collision-detection-

./: .clang-tidy  .gitignore  BartaEngine2.sln  CMakeLists.txt  Makefile  conanfile.py
BartaEngine2/: Application.cpp  Application.h  ApplicationArchive.txt  BartaEngine2.aps  BartaEngine2.vcxproj  BartaObject.h  (+7 more)
src/BartaEngine/: Application.cpp  Application.h  BartaObject.h  BartaObjectManager.cpp  BartaObjectManager.h  CMakeLists.txt  DeletableObject.cpp  DeleteWatchSingleton.cpp  ReduceableList.h  StaticObjectManager.h  pch.h
src/BartaEngine/Collisions/: CMakeLists.txt  StaticCollisionLogger.h
src/BartaEngine/Collisions/CheckCollisionVisitors/: AABB_AABBCheckCollisionVisitor.cpp  CMakeLists.txt  CircleAABBCheckCollisionVisitor.cpp  CircleAABBCheckCollisionVisitor.h  CircleCircleCheckCollisionVisitor.cpp
src/BartaEngine/Collisions/CollcionTestResult/: CMakeLists.txt  CollisionTestResult.h  CollisionTestResultBuilder.cpp  CollisionTestResultBuilder.h  ExtendedCollisionResult.h
src/BartaEngine/Collisions/CollisionDetectionStrategies/: CMakeLists.txt  DynamicCollisionDetectionStrategy.cpp  DynamicCollisionDetectionStrategy.h  StaticCollisionDetectionStrategy.cpp  StaticCollisionDetectionStrategy.h
src/BartaEngine/Collisions/CollisionExecutors/: CMakeLists.txt  CollisionTestExecutor.cpp  CollisionTestExecutor.h  CollisionTestExecutorDecorator.cpp  CollisionTestExecutorDecorator.h  CollisionTestExecutorInterface.h  FilterCollisionsOvertimeDecorator.cpp  FilterCollisionsOvertimeDecorator.h  FilterNoCollisionResultsDecorator.cpp  FilterNoCollisionResultsDecorator.h  StaticCollisionTestExecutor.h
src/BartaEngine/Dynamics/: CMakeLists.txt  ConstVelocityDynamicsUpdateStrategy.cpp  ConstVelocityDynamicsUpdateStrategy.h  DynamicsAwareInterface.h  DynamicsDTO.h  DynamicsUpdateStrategyInterface.h
src/BartaEngine/Dynamics/Timers/: CMakeLists.txt  FrameLimitTimerProxy.cpp  FrameLimitTimerProxy.h  SFML_Timer.cpp  SFML_Timer.h
src/BartaEngine/Events/: BartaEventLoggerInterface.h  CMakeLists.txt  TemplateEventSubscriber.h
src/BartaEngine/Events/Events/: CMakeLists.txt  CollisionEvent.cpp  CollisionEvent.h  LeftClickEvent.h  SCollisionEvent.h  VelocityChangeEvent.h
src/BartaEngine/Events/Subscribers/: CMakeLists.txt  CollisionResponseSubscriber.cpp  CollisionResponseSubscriber.h  DynamicsChangeSubscriber.cpp  DynamicsChangeSubscriber.h  StaticCollisionResponseSubscriber.h
src/BartaEngine/Geometrics/: CMakeLists.txt  Intersections.h  SFML_Transformable.cpp  SFML_Transformable.h  Segment.cpp  TransformableInterface.h  Vector2f.cpp  Vector2f.h
src/BartaEngine/Geometrics/BartaShapes/: AABB.cpp  CMakeLists.txt  Circle.cpp  Circle.h
src/BartaEngine/Geometrics/Math/: BartaMathLibrary.cpp  CMakeLists.txt  MathLibraryInterface.h  QuadraticEquation.cpp
src/BartaEngine/Graphics/: BartaSprite.h  CMakeLists.txt  Color.h  Resource.h  SFML_GraphicsBridge.cpp  SFML_GraphicsBridge.h
src/BartaEngine/Graphics/SFML_Bridge/: CMakeLists.txt  NullDrawableObject.h  ResourceContainerInterface.h  ResourceMatcherInterface.h  SimpleResourceContainer.cpp  SimpleResourceContainer.h  SpriteResourceMatcher.cpp  SpriteResourceMatcher.h
src/BartaEngine/Graphics/SpriteBuilder/: CMakeLists.txt  RectangleWithColorsSpriteBuilder.cpp  SpriteBuilder.h  SpriteMerger.cpp  SpriteMerger.h  StringSpriteBuilder.cpp
src/BartaEngine/Hitbox/: AABB_Hitbox.cpp  CMakeLists.txt  CircleHitbox.cpp
src/BartaEngine/Tests/Utilities/: CMakeLists.txt  TestUtilities.h
src/Sandbox/: Ball.cpp  Ball.h  BartaGraph.cpp  BartaGraph.h  Block.cpp  Block.h  Bomb.cpp  Bomb.h  CMakeLists.txt  DeleteWatch.h  Gun.cpp  Gun.h  ListsDefinitions.h  Player.cpp  Player.h  ReloadMarker.cpp  ReloadMarker.h  SandboxResource.h  SimpleResourceContainer.cpp  SimpleResourceContainer.h  Wall.cpp  Wall.h  env.dist.h  env.h  instruction.txt
src/Sandbox/CustomEvents/: BallCreateEvent.h  CMakeLists.txt  CustomEventLogger.h  FlashMessageEvent.h  GunShotEvent.h  PostDynamicEventLogger.h  SceneChangeEvent.h  StageChangeEvent.cpp  StageChangeEvent.h
src/Sandbox/Objects/: Button.cpp  Button.h  CMakeLists.txt  Flash.cpp  Flash.h  GiantBlock.cpp  GiantBlock.h  Instruction.cpp  Instruction.h  StageSelectButton.cpp  StageSelectButton.h
src/Sandbox/Repository/: ObjectsRepository.cpp  ObjectsRepository.h
src/Sandbox/Scenes/: GameScene.cpp  GameScene.h  InstructionScene.cpp  InstructionScene.h  LobbyScene.cpp  LobbyScene.h  SceneChangeDTO.cuh  SceneInterface.h
src/Sandbox/Stages/: CMakeLists.txt  NoStage.h  StageFive.cpp  StageFive.h  StageFour.cpp  StageFour.h  StageInterface.h  StageOne.cpp  StageOne.h  StageThree.cpp  StageThree.h  StageTwo.cpp  StageTwo.h
src/Sandbox/Subscribers/: BallCreateSubscriber.cpp  BallCreateSubscriber.h  ButtonHoverSubscriber.cpp  ButtonHoverSubscriber.h  CMakeLists.txt  ChangeBallColorSubscriber.cpp  ChangeBallColorSubscriber.h  DynamicsChangeSubscriberProxy.cpp  DynamicsChangeSubscriberProxy.h  ExitButtonSubscriber.cpp  ExitButtonSubscriber.h  FlashMessageSubscriber.cpp  FlashMessageSubscriber.h  GunMoveSubscriber.cpp  GunMoveSubscriber.h  GunShotSubscriber.cpp  GunShotSubscriber.h  InstructionButtonSubscriber.cpp  InstructionButtonSubscriber.h  PlayerMoveSubscriber.cpp  PlayerMoveSubscriber.h  SceneChangeSubscriber.cpp  SceneChangeSubscriber.h  StageChangeSubscriber.cpp  StageChangeSubscriber.h  StageSelectSubscriber.cpp  StageSelectSubscriber.h  StopGameSubscriber.cpp  StopGameSubscriber.h
src/Sandbox/Subscribers/Collisions/: BallBombSubscriber.h  BallHitSubscriber.cpp  BallHitSubscriber.h  BallWallSubscriber.h  BombCollisionSubscriber.cpp  BombCollisionSubscriber.h  BombWallSubscriber.h  CMakeLists.txt  ChangeBallColorOnCollisionSubscriber.cpp  ChangeBallColorOnCollisionSubscriber.h  ChangeBallOnCollisionWithAABB.cpp  ChangeBallOnCollisionWithAABB.h  CollisionSubscriberProxy.cpp  CollisionSubscriberProxy.h  PlayerBallSubscriber.h  PlayerHitSubscriber.cpp  PlayerHitSubscriber.h  PlayerWallCollisionSubscriber.cpp  PlayerWallCollisionSubscriber.h  PlayerWallSubscriber.h  WallBounceSubscriber.cpp  WallBounceSubscriber.h
(+60 files in other folders)
